# online-taxi-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  base.sql  docker-compose.yml  env.sample  relational-algebra.md
migrations/: 001_initial_schema.sql
sql/: admin-dashboard.sql  base.sql  driver-dashboard.sql  passenger-dashboard.sql
src/: Dockerfile  manage.py  pyproject.toml  requirements.txt  start.sh
src/app/: __init__.py  dependencies.py  main.py  models.py  types.py  utils.py
src/app/core/: __init__.py  config.py  db.py  migrations.py  security.py
src/app/routers/: __init__.py  auth.py
src/app/routers/admin/: __init__.py  __main__.py  api.py  views.py
src/app/routers/driver/: __init__.py  api.py  auth.py  views.py
src/app/routers/user/: __init__.py  api_v1.py  auth.py  models.py  views.py
src/app/schemas/: __init__.py  discount.py  location.py  payment.py  trip.py  user.py
src/app/services/: __init__.py  discount_service.py  location_service.py  payment_service.py  trip_service.py  user_service.py
src/css/admin/: base.css
src/css/driver/: base.css
src/css/user/: base.css
src/js/admin/: dashboard.js
src/js/driver/: base.js
src/js/user/: base.js
src/static/libraries/fontawesome-6.7.1/css/: svg-with-js.min.css  v4-font-face.min.css  v4-shims.min.css  v5-font-face.min.css
src/static/libraries/fontawesome-6.7.1/js/: brands.min.js  conflict-detection.min.js  fontawesome.min.js  regular.min.js  solid.min.js  v4-shims.min.js
src/templates/admin/: base.html  users.html
src/templates/auth/: login.html  register.html
src/templates/driver/: base.html
src/templates/public/: 404.html  500.html  index.html
src/templates/user/: base.html  trips.html  wallet.html
